--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ exclude:
 
 # Site settings
 title: JOHAN FLORES
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
+subtitle: LOS VENGADORES DE MAL
 email: blcentra@gmail.com
 name: Ben Centra
 description: >
