--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,9 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: JOHAN FLORES
-subtitle: LOS VENGADORES DE MAL
-email: blcentra@gmail.com
+title: Manzana dulce vs Papaya envidiosa
+subtitle: LOS VENGADORES DE MAL el "trailer"
+email: gato2000078@gmail.com
 name: Ben Centra
 description: >
   A simple yet classy theme for your Jekyll website or blog.
