--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ subtitle: LOS VENGADORES DE MAL el "trailer"
 email: gato2000078@gmail.com
 name: Ben Centra
 description: >
-  A simple yet classy theme for your Jekyll website or blog.
+ La fantastica historia en el que la supervivencia, sera la guerra de mañana entre ambas especies. 
+ "Esto pendera de un hilo". 
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
