--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ exclude:
 title: Manzana dulce vs Papaya envidiosa
 subtitle: LOS VENGADORES DE MAL el "trailer"
 email: gato2000078@gmail.com
-name: Ben Centra
+name: JOHAN-BAT
 description: >
  La fantastica historia en el que la supervivencia, sera la guerra de mañana entre ambas especies. 
  "Esto pendera de un hilo". 
