--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title: Manzana dulce vs Papaya envidiosa
 subtitle: LOS VENGADORES DE MAL el "trailer"
 email: gato2000078@gmail.com
 name: JOHAN-BAT
-description: >
+description: Una muy tragica guerra que casi acaba con el mando de las manzanas dulces>
  La fantastica historia en el que la supervivencia, sera la guerra de mañana entre ambas especies. 
  "Esto pendera de un hilo". 
 # Base URL of site (i.e. /blog). It should always start with a slash,
