--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ cover: "/assets/header_image.jpg"
 logo: "/assets/logo.png"
 
 # Build settings
-markdown: kramdown
+markdown: las mas grende de surpervivencia
 inter_post_navigation: false
 highlightjs_theme: "monokai-sublime"
 
