--- a/_config.yml
+++ b/_config.yml
@@ -9,8 +9,8 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Manzana dulce vs Papaya envidiosa
-subtitle: LOS VENGADORES DE MAL el "trailer"
+title: JOHAN ALAN CURRICULUM VITAE
+subtitle: UNA HISTORIA MUY PERSONAL DE MI "trailer"
 email: gato2000078@gmail.com
 name: JOHAN-BAT
 description: Una muy tragica guerra que casi acaba con el mando de las manzanas dulces>
