--- a/_config.yml
+++ b/_config.yml
@@ -72,14 +72,14 @@ descriptions:
 # social:
 #   - name: Twitter                         # Name of the service
 #     icon: twitter                         # Font Awesome icon to use (minus fa- prefix)
-#     username: "@TheBenCentra"             # (User) Name to display in the footer link
+#     username: "@johan-BAT"             # (User) Name to display in the footer link
 #     url: https://twitter.com/TheBenCentra # URL of your profile (leave blank to not display in footer)
 #     desc: Follow me on Twitter            # Description to display as link title, etc
 #     share: true                           # Include in the "Share" section of posts
 social:
   - name: Twitter
     icon: twitter
-    username: TheBenCentra
+    username: johan-BAT
     url: https://twitter.com/TheBenCentra
     desc: Follow me on Twitter
     share: true
@@ -93,7 +93,7 @@ social:
 
   - name: GitHub
     icon: github
-    username: bencentra
+    username: JOHAN-FBI.github.io
     url: https://github.com/bencentra
     desc: Fork me on GitHub
     share: false
