--- a/_config.yml
+++ b/_config.yml
@@ -10,12 +10,10 @@ exclude:
 
 # Site settings
 title: JOHAN ALAN CURRICULUM VITAE
-subtitle: UNA HISTORIA MUY PERSONAL DE MI "trailer"
+subtitle: Curriculum Vitae "trailer"
 email: gato2000078@gmail.com
 name: JOHAN-BAT
-description: Una muy tragica guerra que casi acaba con el mando de las manzanas dulces>
- La fantastica historia en el que la supervivencia, sera la guerra de mañana entre ambas especies. 
- "Esto pendera de un hilo". 
+description: Curriculum vitae: Tiene el certificado de la primaria tambien el la secundaria y pronto de la preparatoria, fue a varios campeonatos de futbol en que fue portero y gano una vez un camoeonato local
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
